# newsbrief-repo-v0.2.2

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  nightly.yml
api/: main.py
api/routers/: briefs.py  health.py  users.py
config/: iptc_map.yaml  sources.yaml
core/: config.py
docs/: openapi.yaml
docs/runbooks/: daily_pipeline.md  dmrc_spf_dkim.md
emailer/templates/: cards.html  daily.html  daily.txt
public/: index.html
schemas/: brief_manifest.schema.json
scripts/: build_feeds.py  build_pages_index.py  demo.py  http_fetch.py  live_demo.py  seed.py  validate_manifest.py  validate_openapi.py
tests/unit/: test_dedupe.py  test_health.py  test_html_extractor.py  test_rss_adapter.py
