[project]
name = "newsbrief"
version = "0.1.1"
description = "Agent-friendly scaffold for an AI-powered daily news brief"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.2",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "loguru>=0.7.2",
    "orjson>=3.10.0",
    "structlog>=24.1.0",
    "jinja2>=3.1",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "redis>=5.0",
    "celery>=5.3",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "black>=24.4.2",
    "bandit>=1.7.8",
    "httpx>=0.27.0",
    "types-requests",
    "types-redis",
    "prance>=23.6.21",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","N","S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
