[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsbrief"
version = "0.2.2"
description = "NewsBrief scaffold: demo pipelines, templates, Pages publishing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NewsBrief" }]
dependencies = [
  "jinja2>=3.1.2",
  "jsonschema>=4.22",
  "feedparser>=6.0.11",
  "trafilatura>=1.7.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.urls]
Homepage  = "https://bigthack.github.io/newsbrief-repo-v0.2.2/"
Repository = "https://github.com/bigthack/newsbrief-repo-v0.2.2"
Issues     = "https://github.com/bigthack/newsbrief-repo-v0.2.2/issues"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
